<resources>
    <string name="app_name">ProxApp</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="hello_str">Вас приветсутвует Prox!</string>
    <string name="login_button_text">Вход</string>
    <string name="reg_button_text">Регистрация</string>
    <string name="reg_text">Регистрация нового пользователя</string>
    <string name="r_un_login_hint">Введите уникальный логин</string>
    <string name="r_name_hint">Введите свое имя</string>
    <string name="r_password_hint">Придумайте пароль</string>
    <string name="r_password_rep_hint">Повторите пароль</string>
    <string name="title_activity_app">AppActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="extra_info">Дополнительная информация</string>
    <string name="del_contact">Удалить контакт</string>
    <string name="empty_list_contacts">Список контактов пуст.\n
        Нажмите на кнопку внизу,\n
        чтобы добавить кого-нибудь в список</string>
    <string name="user_login">Логин</string>
    <string name="user_name">Имя</string>
    <string name="empty_list_find_contacts">Список поиска пуст</string>

</resources>
