<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sa.proxapp.MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/hello_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:id="@+id/textView"
        android:textSize="40sp"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/login_hint"
        android:layout_margin="@dimen/activity_horizontal_margin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/password_hint"
        android:layout_margin="@dimen/activity_vertical_margin" />

    <Button
        android:text="@string/login_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/login_button" />

    <Button
        android:text="@string/reg_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/reg_button" />

</LinearLayout>
